refactor: Massive refactorings, using IntelliJ